[gd_scene load_steps=6 format=2]

[ext_resource path="res://emergency_button/img/emergency_button.tres" type="Texture" id=1]
[ext_resource path="res://emergency_button/collision_shape_2d.gd" type="Script" id=2]
[ext_resource path="res://emergency_button/emergency_button.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 26.1725

[node name="emergency_button" type="Node2D"]
script = ExtResource( 3 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
frames = SubResource( 1 )

[node name="press_emergency_button_area_2d" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="press_emergency_button_area_2d"]
shape = SubResource( 2 )
script = ExtResource( 2 )

[node name="force_5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="label" type="Label" parent="force_5_z_index"]
unique_name_in_owner = true
margin_left = -253.0
margin_top = -198.0
margin_right = 252.0
margin_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
text = "เรียกประชุม"
align = 1
valign = 1

[connection signal="body_entered" from="press_emergency_button_area_2d" to="." method="_on_press_energency_button_area_2d_body_entered"]
[connection signal="body_exited" from="press_emergency_button_area_2d" to="." method="_on_press_energency_button_area_2d_body_exited"]
[connection signal="input_event" from="press_emergency_button_area_2d" to="." method="_on_press_emergency_button_area_2d_input_event"]
